Fix HTML structure and update logo references

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 <script>
 function goNext() {
-    window.location.href= "E:/New%20folder/hello.html"; // change page name
+    window.location.href= "hello.html"; // change page name
 }
 </script>
 </center>
@@ -214,3 +214,4 @@ function goNext() {
 
 </body>
 </html>
+
